--- a/INP_project/src/main/webapp/assets/css/person.css
+++ b/INP_project/src/main/webapp/assets/css/person.css
@@ -7,14 +7,9 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-div{
-border: 3px solid gold; float: left; height: auto; width: 200px; margin: 15px 25px 15px 0px; padding: 10px;
-}
 
 
-td{
-	  margin: -15px 20px 0px 20px;
-}
+
 
 
 
@@ -22,7 +17,7 @@ td{
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
-pre, abbr, acronym, address, big, cite,
+pre, a, abbr, acronym, address, big, cite,
 code, del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var, b,
 u, i, center, dl, dt, dd, ol, ul, li, fieldset,
@@ -31,122 +26,16 @@ tfoot, thead, tr, th, td, article, aside,
 canvas, details, embed, figure, figcaption,
 footer, header, hgroup, menu, nav, output, ruby,
 section, summary, time, mark, audio, video {
-	margin: 2%;
+	margin: 1%;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	}
-	
-
-
+	font: inherit;
+	vertical-align: baseline;}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
-	
-	@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
-.snip1566 {
-  position: relative;
-  display: inline-block;
-  margin: 30px;
-  max-width: 190px;
-  width: 100%;
-  color: #bbb;
-  font-size: 16px;
-  box-shadow: none !important;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-}
-
-.snip1566 *,
-.snip1566:before,
-.snip1566:after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all 0.3s linear;
-  transition: all 0.3s linear;
-}
-
-.snip1566:before,
-.snip1566:after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  border-radius: 50%;
-  content: '';
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  z-index: -1;
-  border: 2px solid #bbb;
-  border-color: transparent #bbb;
-}
-
-.snip1566 img {
-  max-width: 100%;
-  backface-visibility: hidden;
-  vertical-align: top;
-  border-radius: 50%;
-  padding: 10px;
-}
-
-.snip1566 figcaption {
-  position: absolute;
-  top: 5px;
-  bottom: 5px;
-  left: 5px;
-  right: 5px;
-  opacity: 0;
-  background-color: rgba(0, 0, 0, 0.9);
-  border-radius: 50%;
-}
-
-.snip1566 i {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  font-size: 4em;
-  z-index: 1;
-}
-
-.snip1566 a {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-}
-
-.snip1566:hover figcaption,
-.snip1566.hover figcaption {
-  opacity: 1;
-  -webkit-transform: translateX(0);
-  transform: translateX(0);
-}
-
-.snip1566:hover:before,
-.snip1566.hover:before,
-.snip1566:hover:after,
-.snip1566.hover:after {
-  border-width: 10px;
-}
-
-.snip1566:hover:before,
-.snip1566.hover:before {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.snip1566:hover:after,
-.snip1566.hover:after {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-	
 	
 	
 	
@@ -182,8 +71,8 @@ footer, header, hgroup, menu, nav, section {
 		font-size: 20px;
 		position: relative;
 		
-		left: 50px;
-		top: 20px;
+		left: 30px;
+		top: 10px;
 
 	}
 
@@ -2523,7 +2412,7 @@ input, select, textarea {
 			}
 
 		table td {
-			padding: 1em 1em;
+			padding: 0.75em 0.75em;
 		}
 
 		table th {
