--- a/INP_project/src/main/webapp/css/style.css
+++ b/INP_project/src/main/webapp/css/style.css
@@ -39,6 +39,9 @@ a {
 
 .bt_wrap {
     margin-top: 30px;
+    position: relative;
+    bottom: -100px;
+    left: -60px;
 }
 
 .bt_wrap {
@@ -64,6 +67,13 @@ a {
 .bt_wrap a.on {
     background: #000;
     color: #fff;
+}
+
+.bt_wrap .del {
+    position: relative;
+    left: -480px;
+    bottom: 130px;
+    padding: 5px;
 }
 
 .board_list {
@@ -120,13 +130,13 @@ a {
     font-size: 15px;
 }
 
-.board_list .type {
+.board_list .date {
     width: 200px;
     font-size: 15px;
 }
 
-.board_list .date {
-    width: 100px;
+.board_list .count {
+    width: 90px;
     font-size: 15px;
 }
 
@@ -134,6 +144,8 @@ a {
     margin-top: 30px;
     text-align: center;
     font-size: 0;
+    position: absolute;
+    left: 750px;
 }
 
 .board_page a {
