--- a/INP_project/src/main/webapp/assets/css/main.css
+++ b/INP_project/src/main/webapp/assets/css/main.css
@@ -51,6 +51,11 @@ footer, header, hgroup, menu, nav, section {
 	}
 
 
+#size{
+	width: 1800px;
+} 
+
+
 	
 
 	#pw{
@@ -65,15 +70,23 @@ footer, header, hgroup, menu, nav, section {
 	
 	
 	}
+	
+	#party{
+	position: relative;
+	width: 260px;
+	top: 80px;
+	right: -1100px;
+	
+	}
 
 	#btn1{
 		display: inline;
 		position: relative;
 		width: 100px;
 		font-size: 10px;
-		top: 30px;
+		top: -150px;
 		
-		right: -230px;
+		right: -1300px;
 	}
 
 	#btn2{
@@ -82,11 +95,30 @@ footer, header, hgroup, menu, nav, section {
 		position: relative;
 		width: 100px;
 		font-size: 10px;
-		top: 30px;
+		top: -150px;
 		
-		right: -5px;
+		right: -1350px;
 
 	}
+	
+	.S{
+
+		background-color: #1A2026;
+		height: 150px;
+		position: relative;
+		top: -20px;
+		width: 1900px;
+
+	}
+	
+	#footlogo{
+	
+		position: relative;
+		top: -55px;
+	
+	}
+
+	
 	
 	
 	#foot li {
@@ -96,8 +128,8 @@ footer, header, hgroup, menu, nav, section {
 		font-size: 18px;
 		position: relative;
 		
-		left: 200px;
-		top: -5px;
+		left: 300px;
+		top: -180px;
 
 	}
 
@@ -164,6 +196,23 @@ input::-moz-focus-inner {
 	background-color: rgb(0,140,186);
   }
   
+ 
+ #textbox2{
+ 
+ 	position: relative;
+ 	left: 210px;
+ 
+ 
+ }
+ 
+  #textbox3{
+ 
+ 	position: relative;
+ 	left: 600px;
+ 
+ 
+ }
+ 
  
   
   .text {
@@ -292,9 +341,10 @@ input, select, textarea {
 		}
 
 
-
-		.wrap {
+.wrap {
+			position:relative;
 			width:100%;
+			bottom: 150px;
 			overflow:hidden;
 			
 		  }
@@ -302,7 +352,7 @@ input, select, textarea {
 			width:100%;
 			margin:0 auto;
 			overflow:visible;
-			height:400px;
+			height:600px;
 		  }
 		  
 		  .swiper-slide {
@@ -2950,8 +3000,67 @@ input, select, textarea {
 			
 			
 			
-			width: 1200px;
-			height: 550px;
+			width: 900px;
+			height: 360px;
+		}
+		
+		.spotlight .image2 {
+			-moz-order: 1;
+			-webkit-order: 1;
+			-ms-order: 1;
+			order: 1;
+			border-radius: 0;
+			width: 35%;
+			position: relative;
+			left :-20px;
+			
+		}
+
+		
+
+
+
+		.spotlight .content2 {
+		position: relative;
+			padding: 2em 4em 0.1em 4em ;
+			-moz-order: 2;
+			-webkit-order: 2;
+			-ms-order: 2;
+			order: 2;
+			background-color: rgb(0, 0, 0);
+			right : 50px;
+			
+			
+			width: 1000px;
+			height: 360px;
+		}
+		
+		.spotlight .image3 {
+			-moz-order: 1;
+			-webkit-order: 1;
+			-ms-order: 1;
+			order: 1;
+			border-radius: 0;
+			width: 40%;
+			
+		}
+
+		
+
+
+
+		.spotlight .content3 {
+			padding: 2em 4em 0.1em 4em ;
+			-moz-order: 2;
+			-webkit-order: 2;
+			-ms-order: 2;
+			order: 2;
+			background-color: rgb(0, 0, 0);
+			
+			
+			
+			width: 800px;
+			height: 360px;
 		}
 
 		.spotlight:nth-child(2n) {
@@ -3023,6 +3132,20 @@ input, select, textarea {
 
 		}
 		
+		div#content2{
+
+				display: none;
+				
+				
+
+		}
+		div#content3{
+
+				display: none;
+				
+				
+
+		}
 		
 
 
