--- a/INP_project/src/main/webapp/css/style.css
+++ b/INP_project/src/main/webapp/css/style.css
@@ -51,13 +51,15 @@ a {
 }
 
 .bt_wrap a {
-    display: inline-block;
+	
+        display: inline-block;
     min-width: 80px;
     margin-left: 10px;
     padding: 10px;
     border: 1px solid #000;
     border-radius: 2px;
     font-size: 1.4rem;
+   
 }
 
 .bt_wrap a:first-child {
@@ -242,6 +244,16 @@ a {
     border-bottom: 1px solid rgb(29, 11, 11);
     line-height: 160%;
     font-size: 1.4rem;
+}
+
+
+.board_view .comment{
+	
+	padding: 15px;
+    border-bottom: 1px solid rgb(29, 11, 11);
+    line-height: 160%;
+    font-size: 1.4rem;
+
 }
 
 .board_write {
