--- a/INP_project/src/main/webapp/assets/css/culmap.css
+++ b/INP_project/src/main/webapp/assets/css/culmap.css
@@ -549,6 +549,11 @@ input, select, textarea {
 		margin: 0 0 1em 0;
 		text-transform: uppercase;
 	}
+	
+	
+	h3 firstHeading {
+		color: #0080ff;
+	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 			color: inherit;
